# MLops-Risk-Prediction

./: .gitignore  README.md  mlflow.db  pyproject.toml  requirements.txt
config/: settings.yaml
data/eda_outputs/: business_insights.json
reports/explainability/: explainability_summary.json  global_feature_importance.csv
reports/explainability/local/: local_prediction_explanation.json
reports/models/: advanced_xgboost_metrics.json  metrics.json  xgboost_tuning_results.csv
src/mlops_risk_platform/: config.py
src/mlops_risk_platform.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/mlops_risk_platform/api/: main.py  schema.py
src/mlops_risk_platform/data/: generate_sample_data.py  ingest_data.py
src/mlops_risk_platform/eda/: analyze_data.py
src/mlops_risk_platform/explainability/: explain_model.py
src/mlops_risk_platform/models/: train_advanced.py  train_baseline.py
src/mlops_risk_platform/tracking/: track_experiments.py
src/mlops_risk_platform/utils/: __init__.py  logger.py
